<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Jai Shri Mataji</string>
    <string name="app_name">Sahaja Yoga Center Finder</string>
    <string name="color_hline">#FFFFFF</string>
    <string name="color_content">#FFFFCC</string>
    <string name="color_head">#99FF00</string>
    <string name="abt_title">Sahaja Yoga Center Finder App 2.2"</string>
    <string name="abt_intro">This Application is made for searching Sahaja Yoga Meditation Centers in India.</string>
    <string name="abt_fac">Application version Provides following facilities:\n\n
		1. Search centers by Single Keyword.\n\n
		2. Search centers by Region.\n\n
		3. By single click you will get map of particular center address.\n\n
		4. Add center reminder to Calendar.\n\n
		5. Add new center to Server Database.\n\n
		6. Edit/Update Public Program information to server Database.\n\n
		7. Edit/Update center information to Server Database.\n\n
		8. Save and Delete Center Lists for Offline Use.\n\n
		9. Share Center info by many Options like Mail, SMS.\n\n
		10. Also you can close center by informing to Administrator.\n\n\n\n\n\n</string>
    <string name="abt_other">For any suggestions and feedbacks please mail us at email:\n sahaja.puneys@gmail.com</string>
    <string name="search_hint">Search Hint</string>
    <string name="menu_settings">menu_setting</string>
    <string name="title_activity_main">Sahaja Yoga</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Loading...</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="spin">Program Types</string>
    <string name="save_list_msg">Delete old center lists to get new center data.</string>
    <string name="mobile_msg_hint">Write 10 digit mobile number.</string>
    <string name="email_msg_hint">Write correct email id.</string>
    <string name="review_msg_hint"> Write atleast 10 character review.</string>
    <string name="cancel"> Cancel</string>
    <string name="yes">Yes</string>

    <string-array name="program_types">
        <item> CHAITANYADHARA</item>
        <item>PUBLIC_PROGRAM</item>
    </string-array>

</resources>